@@ -1,26 +1,29 @@
 ﻿Imports System.IO
 Imports Microsoft.Win32
+Imports mRemoteNG.App.Runtime
 
 Namespace Tools
     Public Class IeBrowserEmulation
         Private Const BrowserEmulationKey As String = "Software\Microsoft\Internet Explorer\Main\FeatureControl\FEATURE_BROWSER_EMULATION"
         Private Shared _previousIeBrowserEmulationValue As Integer = 0
         Public Shared Sub Register()
-            Dim registryKey As RegistryKey = Registry.CurrentUser.OpenSubKey(BrowserEmulationKey, True)
-            If registryKey Is Nothing Then
-                Registry.CurrentUser.CreateSubKey(BrowserEmulationKey)
-                registryKey = Registry.CurrentUser.OpenSubKey(BrowserEmulationKey, True)
-                If registryKey Is Nothing Then Return
-            End If
-            Dim exeName As String = Path.GetFileName(Process.GetCurrentProcess().MainModule.FileName)
-            _previousIeBrowserEmulationValue = registryKey.GetValue(exeName, 0)
-            registryKey.SetValue(exeName, 11000, RegistryValueKind.DWord)
+            Try
+                Dim registryKey As RegistryKey = Registry.CurrentUser.OpenSubKey(BrowserEmulationKey, True)
+                If registryKey Is Nothing Then
+                    Registry.CurrentUser.CreateSubKey(BrowserEmulationKey)
+                    registryKey = Registry.CurrentUser.OpenSubKey(BrowserEmulationKey, True)
+                    If registryKey Is Nothing Then Return
+                End If
+                Dim exeName As String = Path.GetFileName(Process.GetCurrentProcess().MainModule.FileName)
+                _previousIeBrowserEmulationValue = registryKey.GetValue(exeName, 0)
+                registryKey.SetValue(exeName, 11000, RegistryValueKind.DWord)
+            Catch ex As Exception
+                MessageCollector.AddExceptionMessage("IeBrowserEmulation.Register() failed.", ex, , True)
+            End Try
         End Sub
 
         Public Shared Sub Unregister()
-#If Not PORTABLE Then
-            Return
-#Else
+#If PORTABLE Then
             Try
                 Dim registryKey As RegistryKey = Registry.CurrentUser.OpenSubKey(BrowserEmulationKey, True)
                 If registryKey Is Nothing Then Return
@@ -30,7 +33,8 @@ Namespace Tools
                 Else
                     registryKey.SetValue(exeName, _previousIeBrowserEmulationValue, RegistryValueKind.DWord)
                 End If
-            Catch
+            Catch ex As Exception
+                MessageCollector.AddExceptionMessage("IeBrowserEmulation.Unregister() failed.", ex, , True)
             End Try
 #End If
         End Sub
