@@ -9,6 +9,7 @@
   Made improvement MR-486 - Allow escaping of variable names for external tools
   Made improvement MR-590 - Make panels docked to the edge of the window keep their size
   Fixed issue MR-187 - F7 keyboard shortcut for New Folder conflicts with remote connections
+  Fixed issue MR-594 - Crash on startup if write access is denied to the IE browser emulation registry key
   Fixed issue MR-603 - Some configuration options are still shown even when inheritance is enabled
   Added "Reset" to config panel context menu to allow resetting some config settings to their default value.
   Added and improved menu icons.
